[gd_scene load_steps=29 format=3 uid="uid://b54mb5mc22ncp"]

[ext_resource type="Texture2D" uid="uid://doow1q673xwju" path="res://assets/_Spritesheet_Objects.png" id="1_g71qs"]
[ext_resource type="Texture2D" uid="uid://bfgom7dcgdsg3" path="res://assets/_Spritesheet_Blocks.png" id="1_hcanw"]
[ext_resource type="Script" path="res://TileMap.gd" id="2_qvsjf"]
[ext_resource type="Texture2D" uid="uid://c4ed4rx7t4knl" path="res://assets/Terrain.png" id="3_c3ivf"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_e7bcu"]
resource_name = "Small Terrain"
texture = ExtResource("1_g71qs")
texture_region_size = Vector2i(128, 128)
0:7/0 = 0
0:7/0/texture_origin = Vector2i(0, 32)
1:7/0 = 0
1:7/0/texture_origin = Vector2i(0, 32)
2:7/0 = 0
2:7/0/texture_origin = Vector2i(0, 32)
3:7/0 = 0
3:7/0/texture_origin = Vector2i(0, 32)
3:7/0/custom_data_0 = "traversible"
0:8/0 = 0
0:8/0/texture_origin = Vector2i(0, 32)
1:8/0 = 0
1:8/0/texture_origin = Vector2i(0, 32)
0:9/0 = 0
0:9/0/texture_origin = Vector2i(0, 32)
1:9/0 = 0
1:9/0/texture_origin = Vector2i(0, 32)
2:9/0 = 0
2:9/0/texture_origin = Vector2i(0, 32)
3:9/0 = 0
3:9/0/texture_origin = Vector2i(0, 32)
3:9/0/custom_data_0 = "traversible"
0:12/0 = 0
0:12/0/texture_origin = Vector2i(0, 32)
1:12/0 = 0
1:12/0/texture_origin = Vector2i(0, 32)
4:7/0 = 0
4:7/0/texture_origin = Vector2i(0, 32)
4:7/0/custom_data_0 = "traversible"
4:9/0 = 0
4:9/0/texture_origin = Vector2i(0, 32)
4:9/0/custom_data_0 = "traversible"
5:9/0 = 0
5:9/0/texture_origin = Vector2i(0, 32)
5:9/0/custom_data_0 = "traversible"
6:9/0 = 0
6:9/0/texture_origin = Vector2i(0, 32)
7:9/0 = 0
7:9/0/texture_origin = Vector2i(0, 32)
8:9/0 = 0
8:9/0/texture_origin = Vector2i(0, 32)
8:8/0 = 0
8:8/0/texture_origin = Vector2i(0, 32)
8:7/0 = 0
8:7/0/texture_origin = Vector2i(0, 32)
7:7/0 = 0
7:7/0/texture_origin = Vector2i(0, 32)
6:7/0 = 0
6:7/0/texture_origin = Vector2i(0, 32)
5:7/0 = 0
5:7/0/texture_origin = Vector2i(0, 32)
5:7/0/custom_data_0 = "traversible"
6:8/0 = 0
6:8/0/texture_origin = Vector2i(0, 32)
7:8/0 = 0
7:8/0/texture_origin = Vector2i(0, 32)
6:12/0 = 0
6:12/0/texture_origin = Vector2i(0, 32)
6:13/0 = 0
6:13/0/texture_origin = Vector2i(0, 32)
7:13/0 = 0
7:13/0/texture_origin = Vector2i(0, 32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5mkjj"]
resource_name = "Blocks"
texture = ExtResource("1_hcanw")
texture_region_size = Vector2i(256, 384)
0:0/0 = 0
0:0/0/y_sort_origin = 128
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -64, -128, 0, 0, 64, 128, 0)
0:0/0/custom_data_0 = "block"
1:0/0 = 0
1:0/0/y_sort_origin = 128
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -64, -128, 0, 0, 64, 128, 0)
1:0/0/custom_data_0 = "block"
0:1/0 = 0
0:1/0/y_sort_origin = 128
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -64, -128, 0, 0, 64, 128, 0)
0:1/0/custom_data_0 = "block"
1:1/0 = 0
1:1/0/y_sort_origin = 128
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -64, -128, 0, 0, 64, 128, 0)
1:1/0/custom_data_0 = "block"
2:1/0 = 0
2:1/0/y_sort_origin = 128
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -64, -128, 0, 0, 64, 128, 0)
2:1/0/custom_data_0 = "block"
3:1/0 = 0
3:1/0/y_sort_origin = 128
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -64, -128, 0, 0, 64, 128, 0)
3:1/0/custom_data_0 = "block"
0:2/0 = 0
0:2/0/y_sort_origin = 128
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-118, 86, 0, 64, 128, 0, -2, 20)
0:2/0/custom_data_0 = "stairs"
0:2/0/custom_data_1 = Vector2i(1, 0)
1:2/0 = 0
1:2/0/y_sort_origin = 128
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-128, 0, 0, 64, 122, 82, -2, 20)
1:2/0/custom_data_0 = "stairs"
1:2/0/custom_data_1 = Vector2i(0, 1)
2:2/0 = 0
2:2/0/y_sort_origin = 128
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-124, 124, 2, 188, 128, 0, 0, -64)
2:2/0/custom_data_0 = "stairs"
2:2/0/custom_data_1 = Vector2i(0, -1)
3:2/0 = 0
3:2/0/y_sort_origin = 128
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(132, 124, 2, 188, -128, 0, 0, -64)
3:2/0/custom_data_0 = "stairs"
3:2/0/custom_data_1 = Vector2i(-1, 0)
0:4/0 = 0
0:4/0/y_sort_origin = 128
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -64, -128, 0, 0, 64, 128, 0)
0:4/0/custom_data_0 = "block"
1:4/0 = 0
1:4/0/y_sort_origin = 128
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -64, -128, 0, 0, 64, 128, 0)
1:4/0/custom_data_0 = "block"
2:4/0 = 0
2:4/0/y_sort_origin = 128
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -64, -128, 0, 0, 64, 128, 0)
2:4/0/custom_data_0 = "block"
3:4/0 = 0
3:4/0/y_sort_origin = 128
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -64, -128, 0, 0, 64, 128, 0)
3:4/0/custom_data_0 = "block"
2:3/0 = 0
2:3/0/y_sort_origin = 128
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -64, -128, 0, 0, 64, 128, 0)
2:3/0/custom_data_0 = "block"
3:3/0 = 0
3:3/0/y_sort_origin = 128
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -64, -128, 0, 0, 64, 128, 0)
3:3/0/custom_data_0 = "block"
2:0/0 = 0
2:0/0/y_sort_origin = 128
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -64, -128, 0, 0, 64, 128, 0)
2:0/0/custom_data_0 = "block"
3:0/0 = 0
3:0/0/y_sort_origin = 128
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(0, -64, -128, 0, 0, 64, 128, 0)
3:0/0/custom_data_0 = "block"
0:3/0 = 0
0:3/0/y_sort_origin = 128
0:3/0/custom_data_0 = "block"
1:3/0 = 0
1:3/0/y_sort_origin = 128
1:3/0/custom_data_0 = "block"

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qxi7u"]
resource_name = "Wide Terrain"
texture = ExtResource("1_g71qs")
texture_region_size = Vector2i(256, 128)
1:8/0 = 0
1:8/0/texture_origin = Vector2i(0, 32)
2:8/0 = 0
2:8/0/texture_origin = Vector2i(0, 32)
0:12/0 = 0
0:12/0/texture_origin = Vector2i(0, 32)
0:12/0/custom_data_0 = "traversible"
1:12/0 = 0
1:12/0/texture_origin = Vector2i(0, 32)
1:12/0/custom_data_0 = "traversible"
2:12/0 = 0
2:12/0/texture_origin = Vector2i(0, 32)
2:12/0/custom_data_0 = "traversible"
0:13/0 = 0
0:13/0/texture_origin = Vector2i(0, 32)
1:13/0 = 0
1:13/0/texture_origin = Vector2i(0, 32)
2:13/0 = 0
2:13/0/texture_origin = Vector2i(0, 32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tmxr5"]
resource_name = "Tall Terrain"
texture = ExtResource("1_g71qs")
texture_region_size = Vector2i(128, 256)
0:5/0 = 0
0:5/0/texture_origin = Vector2i(0, 64)
1:5/0 = 0
1:5/0/texture_origin = Vector2i(0, 64)
2:5/0 = 0
2:5/0/texture_origin = Vector2i(0, 64)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pneue"]
resource_name = "Medium Terrain"
texture = ExtResource("1_g71qs")
margins = Vector2i(128, 0)
texture_region_size = Vector2i(256, 256)
1:5/0 = 0
1:5/0/texture_origin = Vector2i(0, 64)
2:5/0 = 0
2:5/0/texture_origin = Vector2i(0, 64)
3:5/0 = 0
3:5/0/texture_origin = Vector2i(0, 64)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dobd7"]
resource_name = "Large Terrain"
texture = ExtResource("1_g71qs")
margins = Vector2i(0, 128)
texture_region_size = Vector2i(384, 384)
0:1/0 = 0
0:1/0/texture_origin = Vector2i(0, 158)
1:1/0 = 0
1:1/0/texture_origin = Vector2i(0, 158)
2:1/0 = 0
2:1/0/texture_origin = Vector2i(0, 158)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2m1rg"]
resource_name = "X-Large Terrain"
texture = ExtResource("1_g71qs")
texture_region_size = Vector2i(384, 512)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, 208)
1:0/0 = 0
1:0/0/texture_origin = Vector2i(0, 208)
2:0/0 = 0
2:0/0/texture_origin = Vector2i(0, 208)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_66408"]
texture = ExtResource("3_c3ivf")
texture_region_size = Vector2i(128, 198)
0:1/0 = 0
0:1/0/y_sort_origin = 64
0:1/0/custom_data_0 = "block"
1:1/0 = 0
1:1/0/y_sort_origin = 64
1:1/0/custom_data_0 = "block"
0:2/0 = 0
1:2/0 = 0
1:0/0 = 0
1:0/0/y_sort_origin = 64
0:0/0 = 0
0:0/0/y_sort_origin = 64
1:3/0 = 0
1:3/0/y_sort_origin = 64
0:3/0 = 0
0:3/0/y_sort_origin = 64
0:4/0 = 0
0:4/0/y_sort_origin = 64
0:4/0/custom_data_0 = "block"

[sub_resource type="TileSet" id="TileSet_drta1"]
tile_shape = 1
tile_layout = 5
tile_size = Vector2i(128, 64)
physics_layer_0/collision_layer = 1
custom_data_layer_0/name = "type"
custom_data_layer_0/type = 4
custom_data_layer_1/name = "climb_direction"
custom_data_layer_1/type = 6
sources/1 = SubResource("TileSetAtlasSource_5mkjj")
sources/0 = SubResource("TileSetAtlasSource_e7bcu")
sources/2 = SubResource("TileSetAtlasSource_qxi7u")
sources/3 = SubResource("TileSetAtlasSource_tmxr5")
sources/4 = SubResource("TileSetAtlasSource_pneue")
sources/5 = SubResource("TileSetAtlasSource_dobd7")
sources/6 = SubResource("TileSetAtlasSource_2m1rg")
sources/8 = SubResource("TileSetAtlasSource_66408")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gfap7"]
texture = ExtResource("3_c3ivf")
texture_region_size = Vector2i(128, 198)
0:0/0 = 0
0:0/0/y_sort_origin = 64
0:1/0 = 0
0:1/0/y_sort_origin = 64
1:1/0 = 0
1:1/0/y_sort_origin = 64
0:2/0 = 0
1:2/0 = 0
0:3/0 = 0
0:3/0/y_sort_origin = 64
1:3/0 = 0
1:3/0/y_sort_origin = 64
0:4/0 = 0
0:4/0/y_sort_origin = 64
1:0/0 = 0
1:0/0/y_sort_origin = 64

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5ww1h"]
texture = ExtResource("1_hcanw")
texture_region_size = Vector2i(256, 384)
1:3/0 = 0
1:3/0/y_sort_origin = 128
0:3/0 = 0
0:3/0/y_sort_origin = 128

[sub_resource type="TileSet" id="TileSet_rh74a"]
tile_shape = 1
tile_layout = 5
tile_size = Vector2i(128, 64)
sources/2 = SubResource("TileSetAtlasSource_5ww1h")
sources/0 = SubResource("TileSetAtlasSource_gfap7")

[sub_resource type="Animation" id="Animation_sciu8"]
resource_name = "float"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 2),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 10), Vector2(0, 0), Vector2(0, -10)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5tva2"]
_data = {
"float": SubResource("Animation_sciu8")
}

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lh88m"]
texture = ExtResource("1_hcanw")
texture_region_size = Vector2i(256, 384)
0:0/0 = 0
0:0/0/y_sort_origin = 128
1:0/0 = 0
1:0/0/y_sort_origin = 128
0:1/0 = 0
0:1/0/y_sort_origin = 128
1:1/0 = 0
1:1/0/y_sort_origin = 128
2:1/0 = 0
2:1/0/y_sort_origin = 128
3:1/0 = 0
3:1/0/y_sort_origin = 128
0:2/0 = 0
0:2/0/y_sort_origin = 128
1:2/0 = 0
1:2/0/y_sort_origin = 128
2:2/0 = 0
2:2/0/y_sort_origin = 128
3:2/0 = 0
3:2/0/y_sort_origin = 128
1:3/0 = 0
1:3/0/y_sort_origin = 128
0:4/0 = 0
0:4/0/y_sort_origin = 128
1:4/0 = 0
1:4/0/y_sort_origin = 128
2:4/0 = 0
2:4/0/y_sort_origin = 128
3:4/0 = 0
3:4/0/y_sort_origin = 128
2:0/0 = 0
2:0/0/y_sort_origin = 128
3:0/0 = 0
3:0/0/y_sort_origin = 128
0:3/0 = 0
0:3/0/y_sort_origin = 128
2:3/0 = 0
2:3/0/y_sort_origin = 128
3:3/0 = 0
3:3/0/y_sort_origin = 128

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bbdhq"]
texture = ExtResource("3_c3ivf")
texture_region_size = Vector2i(128, 198)
0:0/0 = 0
0:1/0 = 0
0:1/0/y_sort_origin = 64
1:1/0 = 0
1:1/0/y_sort_origin = 64
1:0/0 = 0
0:2/0 = 0
0:2/0/y_sort_origin = 64
1:2/0 = 0
1:2/0/y_sort_origin = 64

[sub_resource type="TileSet" id="TileSet_bulsw"]
tile_shape = 1
tile_layout = 5
tile_size = Vector2i(128, 64)
sources/1 = SubResource("TileSetAtlasSource_lh88m")
sources/8 = SubResource("TileSetAtlasSource_bbdhq")

[sub_resource type="Animation" id="Animation_mvlm5"]
resource_name = "float"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1.5, 2.2),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 2),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 5), Vector2(0, 0), Vector2(0, 5)]
}

[sub_resource type="Animation" id="Animation_61iiq"]
resource_name = "highlight"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 0, 1)]
}

[sub_resource type="Animation" id="Animation_cf2iy"]
resource_name = "lowlight"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 0, 0.498039)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h8y8g"]
_data = {
"float": SubResource("Animation_mvlm5"),
"highlight": SubResource("Animation_61iiq"),
"lowlight": SubResource("Animation_cf2iy")
}

[sub_resource type="Animation" id="Animation_28h6k"]
resource_name = "highlight"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../TargetHighlightTileMap:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 1, 0, 0.721569), Color(0, 1, 0, 1)]
}

[sub_resource type="Animation" id="Animation_mqcri"]
resource_name = "lowlight"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../TargetHighlightTileMap:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 1, 0, 0.498039), Color(0, 1, 0, 0.729412)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t2qup"]
_data = {
"highlight": SubResource("Animation_28h6k"),
"lowlight": SubResource("Animation_mqcri")
}

[node name="BaseTileMap" type="TileMap"]
y_sort_enabled = true
tile_set = SubResource("TileSet_drta1")
format = 2
layer_0/y_sort_enabled = true
layer_1/name = "Layer1"
layer_1/modulate = Color(0.901961, 0.901961, 0.901961, 1)
layer_1/y_sort_enabled = true
layer_1/z_index = 1
layer_2/name = "Layer2"
layer_2/y_sort_enabled = true
layer_2/z_index = 2
layer_3/name = "Layer3"
layer_3/y_sort_enabled = true
layer_3/z_index = 3
layer_4/name = "Layer4"
layer_4/y_sort_enabled = true
layer_4/z_index = 4
layer_5/name = "DONOTUSE"
layer_5/y_sort_enabled = true
layer_5/z_index = 5
script = ExtResource("2_qvsjf")

[node name="WaterTileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = SubResource("TileSet_rh74a")
format = 2
layer_0/y_sort_enabled = true
layer_1/name = "Layer1"
layer_1/y_sort_enabled = true
layer_1/z_index = 1
layer_2/name = "Layer2"
layer_2/y_sort_enabled = true
layer_2/z_index = 2
layer_3/name = "Layer3"
layer_3/y_sort_enabled = true
layer_3/z_index = 3
layer_4/name = "Layer4"
layer_4/y_sort_enabled = true
layer_4/z_index = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="WaterTileMap"]
libraries = {
"": SubResource("AnimationLibrary_5tva2")
}
autoplay = "float"

[node name="HighlightTileMap" type="TileMap" parent="."]
modulate = Color(1, 1, 1, 0)
y_sort_enabled = true
tile_set = SubResource("TileSet_bulsw")
format = 2
layer_0/y_sort_enabled = true
layer_1/name = "Layer1"
layer_1/y_sort_enabled = true
layer_1/z_index = 1
layer_2/name = "Layer2"
layer_2/y_sort_enabled = true
layer_2/z_index = 2
layer_3/name = "Layer3"
layer_3/y_sort_enabled = true
layer_3/z_index = 3
layer_4/name = "Layer4"
layer_4/y_sort_enabled = true
layer_4/z_index = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="HighlightTileMap"]
libraries = {
"": SubResource("AnimationLibrary_h8y8g")
}

[node name="TargetHighlightTileMap" type="TileMap" parent="."]
modulate = Color(1, 1, 1, 0)
y_sort_enabled = true
tile_set = SubResource("TileSet_bulsw")
format = 2
layer_0/y_sort_enabled = true
layer_1/name = "Layer1"
layer_1/y_sort_enabled = true
layer_1/z_index = 1
layer_2/name = "Layer2"
layer_2/y_sort_enabled = true
layer_2/z_index = 2
layer_3/name = "Layer3"
layer_3/y_sort_enabled = true
layer_3/z_index = 3
layer_4/name = "Layer4"
layer_4/y_sort_enabled = true
layer_4/z_index = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="TargetHighlightTileMap"]
libraries = {
"": SubResource("AnimationLibrary_t2qup")
}
